# pydantic_ai_agentic_rag

./: .gitignore  README.md  build_db.py  docker-compose.yml  main.py  pyproject.toml
src/pydanticai_rag/: __init__.py
src/pydanticai_rag/agents/: rag_agent.py
src/pydanticai_rag/mixins/: pg_mixin.py
src/pydanticai_rag/model/: database.py
